--- a/application/static/sass/base/_variables.sass
+++ b/application/static/sass/base/_variables.sass
@@ -26,7 +26,7 @@ $desktop: $medium !default
 //==============================================================================
 
 $background: white !default
-$primary-color: #b3321c !default
+$primary-color: #a31800 !default
 $secondary-color: #543a9b !default
 $accent-color: #cdcdcd !default
 $alternate-background: #fafafa !default
