--- a/application/static/sass/components/_scaffolding.sass
+++ b/application/static/sass/components/_scaffolding.sass
@@ -267,7 +267,7 @@ div.scrollbar
   &.background
     background: $bg-dark
     flex: 14
-    overflow: auto
+    //overflow: auto
 
   .flex
     display: flex
