--- a/application/static/sass/style.sass
+++ b/application/static/sass/style.sass
@@ -50,7 +50,7 @@ header
     display: flex
     justify-content: center
     align-items: center
-    background: $theme-primary
+    background: $primary-color
     height: $page-title-height
     text-size: 0.65rem
     color: #ffffffb4
@@ -120,7 +120,7 @@ header
     margin-bottom: 10px
     // padding: 20px
 
-.circle
+.logo-circle
     line-height: 0        // remove line-height */
     display: inline-block    // circle wraps image */
     // margin: 5px
@@ -141,5 +141,5 @@ header
         -webkit-transition: ease-out 0.2s
 
 a
-    .circle
+    .logo-circle
         color: transparent
