--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -35,7 +35,7 @@
             <!-- Header -->
             <header>
                 <div class="header wrapper">
-                    <a href="{{ url_for('home') }}" class="circle">
+                    <a href="{{ url_for('home') }}" class="logo-circle">
                         <img height="40" width="40" src="{{ url_for('static', filename='images/logo-circle.png') }}">
                     </a>
                     <span style="font-size: 1.5rem;">Queer Theatre Kalamazoo</span>
