--- a/application/static/sass/base/_variables.sass
+++ b/application/static/sass/base/_variables.sass
@@ -153,8 +153,8 @@ $code-borders: $borders !default
 //==============================================================================
 // Custom
 //==============================================================================
-$bg-dark: #1f1f1f !default
-$bg-dark-blur: #1f1e1fde !default
+$bg-dark: #111111 !default
+$bg-darker: #080808 !default
 $theme-primary: #b71e1e !default
 $theme-primary-dark: #511b1b !default
 $theme-secondary: #4b4a9c !default
