--- a/application/static/sass/components/_scaffolding.sass
+++ b/application/static/sass/components/_scaffolding.sass
@@ -16,12 +16,12 @@ body
   font-size: $body-font-size
   margin: 0
 
-  &.background
-    background: url("../background.jpg") no-repeat center center fixed
-    -webkit-background-size: cover
-    -moz-background-size: cover
-    -o-background-size: cover
-    background-size: cover
+//  &.background
+//    background: url("../background.jpg") no-repeat center center fixed
+//    -webkit-background-size: cover
+//    -moz-background-size: cover
+//    -o-background-size: cover
+//    background-size: cover
 
 p,
 ol,
