--- a/application/templates/partials/navigation.html
+++ b/application/templates/partials/navigation.html
@@ -6,4 +6,4 @@
 <a class="fancy-link" style="flex: 1 1 auto;"></a>
 <a class="fancy-link" href="#">My Account</a>
 <a class="fancy-link" href="{{ url_for('bp_management.dashboard') }}">Admin Portal</a>
-<a class="fancy-link" data-a11y-dialog-show="my-dialog">About This Site</a>
+<a class="fancy-link" data-a11y-dialog-show="about-site-dialog">About This Site</a>
