--- a/application/blueprints/management/templates/partials/navigation_management.html
+++ b/application/blueprints/management/templates/partials/navigation_management.html
@@ -5,4 +5,4 @@
 <a class="fancy-link" style="flex: 1 1 auto;"></a>
 <a class="fancy-link" href="#">My Account</a>
 <a class="fancy-link" href="{{ url_for('home') }}">Website Home</a>
-<a class="fancy-link" data-a11y-dialog-show="my-dialog">About This Site</a>
+<a class="fancy-link" data-a11y-dialog-show="about-site-dialog">About This Site</a>
