--- a/application/static/sass/components/_navigation.sass
+++ b/application/static/sass/components/_navigation.sass
@@ -3,17 +3,54 @@
  */
 
 .navigation
-    display: flex
-    flex: 3
-    flex-direction: column
-    align-items: center
-    background: $bg-dark-blur
-    backdrop-filter: blur(15px)
+    flex: 4
+    background: $bg-darker
     width: 20rem
-    //max-height: calc(100vh - 110px)
-    overflow: hidden
+    
+    .sidebar
+        display: flex
+        flex-direction: column
+        align-items: center
+        overflow: hidden
+        margin: 0
+        padding: 20px
 
-    a
-        margin: 1.25em 0 0 0
-        font-size: clamp(1.1em, 2.1vw, 1.3em)
-        align-content: center
+        a
+            margin: 1.25em 0 0 0
+            font-size: clamp(1.1em, 2.1vw, 1.3em)
+            align-content: center
+            user-select: none
+
+
+#sidebar-toggle 
+    background-color: orange
+    border-radius: 50%
+    display: block
+    height: 2.2rem
+    left: 1rem
+    position: absolute
+    text-decoration: none
+    top: 18px
+    width: 2.2rem
+
+#sidebar-toggle::after 
+    content: "🡐"
+    color: white
+    display: block
+    font-size: 1.6rem
+    font-weight: bold
+    margin: -.2rem 0 0 0
+    text-align: center
+
+.no-sidebar #sidebar-toggle::after 
+    content: "🡒"
+    margin-left: .2rem
+
+#sidebar-toggle:hover 
+    background-color: goldenrod
+
+aside.no-sidebar
+    display: none
+
+aside.no-sidebar #content 
+    width: 100%
