Blueprints looking good and mostly functional and VERY confusing.

--- a/application/static/sass/components/_forms.sass
+++ b/application/static/sass/components/_forms.sass
@@ -55,7 +55,7 @@ legend
 
 // Fix issues with select
 select
-  color: $font-color
+  // color: $font-color
   -webkit-appearance: none
   -moz-appearance: none
   // background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABIAAAAJBAMAAADN8WE8AAAAJ1BMVEUAAABHcEwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB9YSk7AAAADXRSTlPXABaehSjPsTwKw2xUcKPlSQAAADtJREFUCNdjMGBgYGAWBAKGACCLFcwSAbIcwSyhBAY2RTBLcAMDtyCENYthJZQlw3AQyhIsF4SxOiAsAFMMCKPY35E7AAAAAElFTkSuQmCC) right center no-repeat
