--- a/application/static/sass/components/_scaffolding.sass
+++ b/application/static/sass/components/_scaffolding.sass
@@ -100,7 +100,8 @@ h5
 // Link styling
 a.fancy-link,
 .link-like,
-.post-content a
+.post-content a,
+.prod-content-wrapper a
   position: relative
   color: rgb(239, 171, 171)
   text-decoration: none
@@ -280,4 +281,4 @@ div.scrollbar
   .sidebar
     min-width: 35%
     max-width: 35%
-    margin: 0 2rem
+    margin-left: 2rem;
