--- a/application/templates/news.html
+++ b/application/templates/news.html
@@ -3,13 +3,34 @@
 {% block content %}
 <h1>News</h1>
 
+
+
+<div class="cast-crew-container">
+    {% for post in posts %}
+
+    <div class="block">
+        <div class="block-wrapper">
+            <h5 class="person-name"><a class="fancy-link"
+                    href="{{ url_for('bp_post.display_post', category=post.category, post_id=post.post_id) }}">{{
+                    post.title }}</a></h5>
+            <p class="person-role"><span>{{ post.subtitle }}</span></p>
+            <p>{{ post.snippet|truncate(256) }}</p>
+            <p>Posted {{ post.create_date | format_post_date }} by <a class="fancy-link" href="{{ url_for('bp_person.display_artist', artist_id=post.artist_id, slug=post.artist_slug) }}">{{ post.name }}</a></p>
+        </div>
+    </div>
+
+    {% endfor %}
+</div>
+
+
+
 {% for post in posts %}
 <div class="post-preview">
     <h2 class="post-title">
-        <a class="fancy-link" href="{{ url_for('bp_post.display_post', post_id = post.post_id) }}">{{ post.title }}</a>
+        <a class="fancy-link" href="{{ url_for('bp_post.display_post', category=post.category, post_id=post.post_id) }}">{{ post.title }}</a>
     </h2>
     <h3 class="post-subtitle">{{ post.subtitle }}</h3>    
-    <span class="">{{ post.content | safe | truncate(150) }}</span>
+    <p>{{ post.snippet }}</p>
     {% if post.content | length >= 150 %}
     <span>...</span>
     {% endif %}
@@ -43,6 +64,53 @@ hr.post-divider {
     margin: 1rem auto;
     opacity: 0.2;
     width: 75%;
+}
+
+
+div.cast-crew-container {
+    margin: 30px auto;
+    display: grid;
+    /* Define Auto Row size */
+    grid-auto-rows: auto;
+    /*Define our columns */
+    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+    grid-gap: 1em;
+}
+
+div.block {
+    display: flex;
+    align-items: center;
+    
+    padding: 5px;
+    background-color: #181818;
+    border-radius: 2px;
+}
+
+div.block a.circle {
+    margin: 0 20px 0 20px;
+}
+
+div.block p {
+    margin-top: 0.5rem;
+    margin-bottom: 0;
+}
+
+div.block-wrapper {
+    text-align: left;
+    padding: 1rem;
+}
+
+h5.person-name {
+    font-size: 1.2rem;
+    margin: 0 0 0.25rem 0;
+}
+
+p.person-role {
+    margin: 0;
+}
+
+p.person-role>span {
+    font-style: italic;
 }
 </style>
 
