--- a/application/static/sass/style.sass
+++ b/application/static/sass/style.sass
@@ -48,7 +48,9 @@ header
     background: $primary-color
     height: $page-title-height
     text-size: 0.65rem
-    color: #ffffffb4
+
+    a
+        color: #ffffffec
 
 // .flex
 //     display: flex
@@ -70,7 +72,7 @@ header
         display: flex
 
 @media screen and (max-width: 640px)
-    .sidebar
+    aside.navigation
         display: none
 
 @keyframes fade-in
