--- a/application/static/sass/main.css
+++ b/application/static/sass/main.css
@@ -47,73 +47,12 @@ ol li ol {
   margin-bottom: 0;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5 {
-  margin: 1.5rem 0;
-  font-weight: 600;
-  font-family: "Domine", -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
-  line-height: 1.2;
-  color: #e9e9e9;
-}
-
-h1:not(:first-child),
-h2:not(:first-child),
-h3:not(:first-child),
-h4:not(:first-child),
-h5:not(:first-child) {
-  margin: 1.5rem 0;
-}
-
-h1:not(:first-child),
-h2:not(:first-child),
-h3:not(:first-child) {
-  margin-top: 2rem;
-}
-
 h1 {
-  font-size: 1.75rem;
+  font-size: clamp(1.5rem, 2vw + 1rem, 2.25rem);
 }
 
-h2 {
-  font-size: 1.5rem;
-}
-
-h3 {
-  font-size: 1.25rem;
-}
-
-h4 {
-  font-size: 1.1rem;
-}
-
-h5 {
-  font-size: 1rem;
-}
-
-@media (min-width: 600px) {
-  h1:not(:first-child),
-  h2:not(:first-child),
-  h3:not(:first-child) {
-    margin-top: 2.5rem;
-  }
-  h1 {
-    font-size: 2.5rem;
-  }
-  h2 {
-    font-size: 2.25rem;
-  }
-  h3 {
-    font-size: 2rem;
-  }
-  h4 {
-    font-size: 1.75rem;
-  }
-  h5 {
-    font-size: 1.5rem;
-  }
+p {
+  font-size: clamp(1rem, 2vw + 1rem, 1.429rem));
 }
 
 a.fancy-link,
@@ -317,14 +256,17 @@ div.scrollbar {
 
 #content .grow {
   -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+      -ms-flex: 1 100%;
+          flex: 1 100%;
 }
 
 #content .sidebar {
-  min-width: 35%;
+  /* min-width: 35% */
   max-width: 35%;
   margin-left: 2rem;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 auto;
+          flex: 0 1 auto;
 }
 
 /**
@@ -1047,7 +989,10 @@ header .header span {
   background: #a31800;
   height: 50px;
   text-size: 0.65rem;
-  color: #ffffffb4;
+}
+
+.page-title a {
+  color: #ffffffec;
 }
 
 .flex-container {
@@ -1067,7 +1012,7 @@ header .header span {
 }
 
 @media screen and (max-width: 640px) {
-  .sidebar {
+  aside.navigation {
     display: none;
   }
 }
